--- a/PreCheckin/PreCheckin/Base.lproj/Main.storyboard
+++ b/PreCheckin/PreCheckin/Base.lproj/Main.storyboard
@@ -69,7 +69,15 @@
                                     </attributedString>
                                 </state>
                                 <connections>
-                                    <segue destination="aZr-9a-OOd" kind="show" id="U2R-HO-R1M"/>
+                                    <segue destination="9UZ-bz-kGq" kind="presentation" id="guj-nk-L0e"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jH-Vm-P9r">
+                                <rect key="frame" x="164" y="303" width="72" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="test"/>
+                                <connections>
+                                    <segue destination="7cP-te-2dp" kind="presentation" id="HAa-FS-qEs"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -80,7 +88,7 @@
                     <navigationItem key="navigationItem" title="Login" id="gaA-aP-SQp">
                         <barButtonItem key="rightBarButtonItem" title="Next" id="Pkd-zy-r7F">
                             <connections>
-                                <segue destination="UH4-i6-YKu" kind="push" id="vkq-gQ-21i"/>
+                                <segue destination="UH4-i6-YKu" kind="push" id="ukC-XS-9Lp"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -93,37 +101,90 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="681" y="712"/>
+            <point key="canvasLocation" x="680.79999999999995" y="711.99400299850083"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="mej-UF-Ad8">
+        <!--CountriesVC-->
+        <scene sceneID="3Ha-D9-xIJ">
             <objects>
-                <tableViewController storyboardIdentifier="countryFlatTableViews" useStoryboardIdentifierAsRestorationIdentifier="YES" id="aZr-9a-OOd" customClass="TableViewController" customModule="PreCheckin" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="kFb-Yd-Qem">
+                <viewController id="9UZ-bz-kGq" customClass="CountriesVC" customModule="PreCheckin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RHh-tu-c67">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="79" id="vC0-5p-f1H">
-                                <rect key="frame" x="0.0" y="28" width="375" height="79"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yxA-wd-RGt">
+                                <rect key="frame" x="0.0" y="72" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6c5-Lo-CQS">
+                                <rect key="frame" x="0.0" y="128" width="375" height="528"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vC0-5p-f1H" id="g3s-sH-Qql">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="aZr-9a-OOd" id="MJT-XZ-vH5"/>
-                            <outlet property="delegate" destination="aZr-9a-OOd" id="mqx-KD-UrN"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kVF-S5-aRk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CountryCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="79" id="OXL-X6-SeH">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="79"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OXL-X6-SeH" id="dT9-tL-uKH">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9UZ-bz-kGq" id="cde-md-M28"/>
+                                    <outlet property="delegate" destination="9UZ-bz-kGq" id="beb-k1-6EZ"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gbN-b9-Xu7">
+                                <rect key="frame" x="16" y="42" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="dismissButton:" destination="9UZ-bz-kGq" eventType="touchUpInside" id="h1i-Ko-Na4"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="AAL-Vz-V35"/>
+                    </view>
+                    <connections>
+                        <outlet property="btnFuck" destination="gbN-b9-Xu7" id="Pmm-hU-9tU"/>
+                        <outlet property="tbvCountry" destination="6c5-Lo-CQS" id="YFP-YL-IBJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Igv-h4-wgU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="681" y="1451"/>
+            <point key="canvasLocation" x="-159" y="1496"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="Wsf-9F-ezg">
+            <objects>
+                <viewController id="EnV-o7-o8y" customClass="TestViewController" customModule="PreCheckin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="svf-rY-XJb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Rtc-EF-ZV0"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="Vls-I9-mVK">
+                        <barButtonItem key="backBarButtonItem" title="back" id="u4z-ZA-iy9"/>
+                        <barButtonItem key="leftBarButtonItem" title="Dismiss" id="Bk6-h5-IGg">
+                            <connections>
+                                <action selector="touchBack:" destination="EnV-o7-o8y" id="gZA-27-eE4"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="9Qk-58-g0v">
+                            <connections>
+                                <action selector="touchDone:" destination="EnV-o7-o8y" id="IFG-1U-bVf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kgb-u0-ett" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2217" y="1496"/>
         </scene>
         <!--OTP-->
         <scene sceneID="79h-Sm-O42">
@@ -179,6 +240,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kXz-f0-U80" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-159" y="712"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jhH-uw-j4j">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7cP-te-2dp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4wi-jR-t7Y">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EnV-o7-o8y" kind="relationship" relationship="rootViewController" id="s5C-ml-ONi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8qN-um-Lf5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1297" y="1496"/>
         </scene>
     </scenes>
 </document>
